# urbanflow-openenv

./: ReadMe  inference.py  openenv.yaml
env/: environment.py
server/: app.py
urbanflow-openenv/: Dockerfile  ReadMe  app.py  inference.py  openenv.yaml  pyproject.toml
urbanflow-openenv/env/: environment.py
urbanflow-openenv/server/: app.py
