[project]
name = "urbanflow-openenv"
version = "0.1.0"
description = "OpenEnv traffic optimization environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"
